<resources>
    <string name="app_name">My Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="super_duo_scores">Super Duo (Scores APP)</string>
    <string name="super_duo_library">Super Duo (Library APP)</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
