<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mypportfolio.ruddy.myportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/fontSizeMedium" />

    <Button
        android:id="@+id/spotify_streamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:onClick="spotify_streamer"
        android:text="@string/spotify_streamer"/>

    <Button
        android:id="@+id/super_duo_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:onClick="super_duo_scores"
        android:text="@string/super_duo_scores"/>

    <Button
        android:id="@+id/super_duo_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:onClick="super_duo_library"
        android:text="@string/super_duo_library"/>

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:onClick="build_it_bigger"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:onClick="xyz_reader"
        android:text="@string/xyz_reader"  />

    <Button
        android:id="@+id/capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="capstone"
        android:text="@string/capstone"
        android:textColor="@color/colorWhite" />


    </LinearLayout>
</ScrollView>
